1. 格式更新 2. 文档更新 3. 基础代码示例更新

--- a/base-common/pom.xml
+++ b/base-common/pom.xml
@@ -11,13 +11,24 @@
 
     <artifactId>base-common</artifactId>
 
-    <properties>
-    </properties>
     <dependencies>
         <dependency>
             <groupId>com.typesafe</groupId>
             <artifactId>config</artifactId>
             <version>${config.version}</version>
+        </dependency>
+        <!-- EL表达式解析器 类似janino -->
+        <dependency>
+            <groupId>com.googlecode.aviator</groupId>
+            <artifactId>aviator</artifactId>
+            <version>5.3.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-common</artifactId>
+            <version>${flink.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
