--- a/base-connector/kafka-connect-iot/pom.xml
+++ b/base-connector/kafka-connect-iot/pom.xml
@@ -7,22 +7,22 @@
         <groupId>cn.train</groupId>
         <artifactId>basic_tools</artifactId>
         <version>1.0</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>logic-task</artifactId>
+    <artifactId>kafka-connect-iot</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
         <dependency>
-            <groupId>cn.train</groupId>
-            <artifactId>base-env</artifactId>
-            <version>1.0</version>
-            <scope>provided</scope>
+            <groupId>org.apache.iotdb</groupId>
+            <artifactId>iotdb-session</artifactId>
+            <version>1.0.1</version>
         </dependency>
     </dependencies>
-
 </project>
