--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>base-connector</module>
         <module>logic-task</module>
         <module>base-common</module>
+        <module>base-connector/kafka-connect-iot</module>
     </modules>
 
     <properties>
@@ -43,17 +44,16 @@
         <guava.version>29.0-jre</guava.version>
         <jackson.version>2.12.4</jackson.version>
         <flink.scope>provided</flink.scope>
-        <!--  -->
     </properties>
 
+    <!-- 日志（测试） -->
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.7</version>
+            <version>2.0.5</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
 
 </project>
