1. 更改文件包

--- a/base-connector/kafka-connect-iot/pom.xml
+++ b/base-connector/kafka-connect-iot/pom.xml
@@ -24,5 +24,10 @@
             <artifactId>iotdb-session</artifactId>
             <version>1.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.iotdb</groupId>
+            <artifactId>iotdb-jdbc</artifactId>
+            <version>1.0.1</version>
+        </dependency>
     </dependencies>
 </project>
