--- a/base-env/pom.xml
+++ b/base-env/pom.xml
@@ -156,6 +156,11 @@
             <artifactId>base-common</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-streaming-java_2.11</artifactId>
+            <version>1.14.6</version>
+        </dependency>
 
     </dependencies>
 </project>
