--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>logic-task</module>
         <module>base-common</module>
         <module>base-connector/kafka-connect-iot</module>
+        <module>base-extended</module>
     </modules>
 
     <properties>
@@ -29,7 +30,7 @@
         <config.version>1.4.2</config.version>
 
         <!-- Flink Core 环境核心 -->
-        <flink.version>1.17.1</flink.version>
+        <flink.version>1.14.4</flink.version>
         <scala.binary.version>2.11</scala.binary.version>
 
         <!-- Flink Connected 连接器 & Connector Dependencies 连接器依赖 -->
